# core/schema/http/get-in-realm.go
@@ -5,26 +5,25 @@ import (
 	"net/http"
 	"press/common"
 	"press/common/util"
-	"press/core/field"
+	"press/core/schema"
 
 	"github.com/gorilla/mux"
 )
 
-// @Tags Field
-// Gets all the fields of the given schema
-// @Summary Gets all the fields of the given schema
-// @Description Gets all the fields of the given schema
-// @ID get-fields
+// @Tags Schema
+// Gets all the schemas in the given realm
+// @Summary Gets all the schemas in the given realm
+// @Description Gets all the schemas in the given realm
+// @ID get-schemas
 // @Accept  json
 // @Produce  json
 // @Security ApiKeyAuth
 // @Param realmId path string string "Realm ID"
-// @Param schemaId path string string "Schema ID"
-// @Success 200 {array} field.Entity
+// @Success 200 {array} schema.Entity
 // @Failure 400 {object} util.HTTPError
 // @Failure 500 {object} util.HTTPError
-// @Router /v1/realm/{realmId}/schema/{schemaId}/field [get]
-func getBySchema(s field.Service) http.Handler {
+// @Router /v1/realm/{realmId}/schema [get]
+func getInRealm(s schema.Service) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		currentUser := common.GetUser(r.Context())
 		if currentUser == nil {
@@ -34,17 +33,12 @@ func getBySchema(s field.Service) http.Handler {
 
 		params := mux.Vars(r)
 		realmID := params["realmId"]
-		schemaID := params["schemaId"]
 		if realmID == "" {
 			util.ValidationError(w, errors.New("invalid request, realm is missing"))
 			return
 		}
-		if schemaID == "" {
-			util.ValidationError(w, errors.New("invalid request, schema is missing"))
-			return
-		}
 
-		result, err := s.GetBySchema(schemaID)
+		result, err := s.GetInRealm(realmID)
 		if err != nil {
 			util.InternalError(w, err)
 			return
