# core/schema/http/router.go
@@ -7,6 +7,6 @@ import (
 )
 
 func MakeHandlers(router *mux.Router, service schema.Service) {
-	// Create
 	router.Handle("/v1/realm/{realmId}/schema", create(service)).Methods("POST", "OPTIONS")
+	router.Handle("/v1/realm/{realmId}/schema", getInRealm(service)).Methods("GET", "OPTIONS")
 }
