# docs/swagger.json
@@ -197,6 +197,56 @@
             }
         },
         "/v1/realm/{realmId}/schema": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Gets all the schemas in the given realm",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Schema"
+                ],
+                "summary": "Gets all the schemas in the given realm",
+                "operationId": "get-schemas",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Realm ID",
+                        "name": "realmId",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/schema.Entity"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/util.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.HTTPError"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -218,7 +268,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "??",
+                        "description": "Realm ID",
                         "name": "realmId",
                         "in": "path"
                     },
@@ -292,7 +342,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/press_core_field.Entity"
+                                "$ref": "#/definitions/field.Entity"
                             }
                         }
                     },
@@ -354,7 +404,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/press_core_field.Entity"
+                            "$ref": "#/definitions/field.Entity"
                         }
                     },
                     "400": {
@@ -506,22 +556,12 @@
                 }
             }
         },
-        "http.createRequest": {
-            "type": "object",
-            "required": [
-                "name"
-            ],
-            "properties": {
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "press_core_field.Entity": {
+        "field.Entity": {
             "type": "object",
             "properties": {
                 "data": {
-                    "type": "object"
+                    "type": "object",
+                    "additionalProperties": true
                 },
                 "id": {
                     "type": "string"
@@ -537,19 +577,13 @@
                 }
             }
         },
-        "press_core_schema_field.Entity": {
+        "http.createRequest": {
             "type": "object",
+            "required": [
+                "name"
+            ],
             "properties": {
-                "data": {
-                    "type": "object"
-                },
-                "id": {
-                    "type": "string"
-                },
                 "name": {
-                    "type": "string"
-                },
-                "primitive": {
                     "type": "string"
                 }
             }
@@ -575,7 +609,7 @@
                 "fields": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/press_core_schema_field.Entity"
+                        "$ref": "#/definitions/field.Entity"
                     }
                 },
                 "id": {
